--- a/resources/sass/_responsive.sass
+++ b/resources/sass/_responsive.sass
@@ -45,6 +45,8 @@
 		background: transparent
 		margin: 0
 		margin-top: 5em
+		ul
+			max-width: 200px
 		.close
 			display: none
 		article
@@ -61,6 +63,7 @@
 			@include mixins.underline($darkGold)
 		li
 			@include mixins.underline($darkGold)
+			margin-bottom: 0.75em
 
 	.newsletter .newsletterBlock
 		position: absolute
